2008-05-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstdebugutils.c: (debug_dump_element_pad):
	Remove some code that is unused after Stefan's refactoring and uses
	uninitialized variables now, resulting in a compiler warning.

2008-05-01  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstregistry.c: (gst_registry_scan_path_level):
	  Run g_str_has_suffix() only on the file name, not the
	  entire file path.

2008-04-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* plugins/elements/gstqueue.c: (gst_queue_leak_downstream):
	  Since we're not called only from the chain function any longer,
	  we can't assume that there's always data in the queue, so move
	  the is_full check to the beginning of the loop (otherwise we'd
	  hit the assert when changing the limit properties while the
	  queue is empty or not running yet).
	  Also, only set a discont if items were actually removed from
	  the queue.

	* tests/check/elements/queue.c: (test_leaky_downstream):
	  Test case for the above.

2008-04-30  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Jonas Holmberg <jonas dot holmberg at axis dot com>

	* plugins/elements/gstqueue.c: (gst_queue_leak_downstream),
	(gst_queue_chain), (queue_capacity_change),
	(gst_queue_set_property):
	When changing thr max capacity of a leaky queue, immediatly drop buffers
	instead of waiting for a push on the sinkpad. Fixes #530637.

2008-04-30  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstdebugutils.c:
	  Refactor code and fix handling of ghostpads and their proxypads.

2008-04-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstevent.c: (gst_event_has_name):
	* gst/gstevent.h:
	* tests/check/gst/gstevent.c: (GST_START_TEST):
	Add method to conveniently check the name of a custom event with
	gst_event_has_name().
	Reformat the event docs so that related methods are put together instead
	of the default alphabetical sort.
	Update unit test with new method.